
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_short ;
typedef int u_char ;


 int htons (int ) ;
 int ntohs (int) ;

u_short crc16(u_char *data, int len) {
    u_short *p = (u_short *)data,
            crc = 0;
    int size = len >> 1;

    while(size--) crc ^= *p++;

    if(len & 1) crc ^= ntohs(htons(*p) & 0xff00);
    return(crc);
}
