; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_736.c_crc16.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_736.c_crc16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @crc16(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i32*, i32** %3, align 8
  store i32* %8, i32** %5, align 8
  store i32 0, i32* %6, align 4
  %9 = load i32, i32* %4, align 4
  %10 = ashr i32 %9, 1
  store i32 %10, i32* %7, align 4
  br label %11

11:                                               ; preds = %15, %2
  %12 = load i32, i32* %7, align 4
  %13 = add nsw i32 %12, -1
  store i32 %13, i32* %7, align 4
  %14 = icmp ne i32 %12, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %11
  %16 = load i32*, i32** %5, align 8
  %17 = getelementptr inbounds i32, i32* %16, i32 1
  store i32* %17, i32** %5, align 8
  %18 = load i32, i32* %16, align 4
  %19 = load i32, i32* %6, align 4
  %20 = xor i32 %19, %18
  store i32 %20, i32* %6, align 4
  br label %11

21:                                               ; preds = %11
  %22 = load i32, i32* %4, align 4
  %23 = and i32 %22, 1
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %33

25:                                               ; preds = %21
  %26 = load i32*, i32** %5, align 8
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @htons(i32 %27)
  %29 = and i32 %28, 65280
  %30 = call i32 @ntohs(i32 %29)
  %31 = load i32, i32* %6, align 4
  %32 = xor i32 %31, %30
  store i32 %32, i32* %6, align 4
  br label %33

33:                                               ; preds = %25, %21
  %34 = load i32, i32* %6, align 4
  ret i32 %34
}

declare dso_local i32 @ntohs(i32) #1

declare dso_local i32 @htons(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
